[package]
name = "mumble-link"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]

description = "Connector for Mumble Link positional audio"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["voice", "mumble", "positional", "audio", "link"]

repository = "https://github.com/SpaceManiac/mumble-link-rs"
documentation = "https://wombat.platymuus.com/rustdoc/mumble_link_0.1.0"

[dependencies]
libc = "0.2.16"
winapi = "0.2.8"
kernel32-sys = "0.2.2"

[dev-dependencies]
time = "0.1"
