[package]
name = "mumble-link"
version = "0.2.0"
edition = "2018"
authors = ["Tad Hardesty <tad@platymuus.com>"]

description = "Connector for Mumble Link positional audio"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["voice", "mumble", "positional", "audio", "link"]

repository = "https://github.com/SpaceManiac/mumble-link-rs"
documentation = "https://wombat.platymuus.com/rustdoc/mumble_link_0.1.0"

[dependencies]
libc = "0.2.16"
winapi = { version = "0.3", features = ["memoryapi", "handleapi", "winnt"] }

[dev-dependencies]
time = "0.1"
